--- a/index.html
+++ b/index.html
@@ -151,7 +151,73 @@
 
 
 
-    <main class="container">
+    <main class="container-index">
+
+         <!-- Carrossel Desktop -->
+        <section id="carrossel-desktop">
+            <div id="carouselExampleFadeDesktop" class="carousel slide carousel-fade">
+                <div class="carousel-inner">
+
+                    <div class="carousel-item active">
+                        <a href="#" target="_blank">
+                            <img src="imagens/banners/banner-pd-ead-desktop.png" class="d-block w-100" alt="Banner Desktop 1">
+                        </a>
+                    </div>
+
+                    <div class="carousel-item">
+                        <img src="imagens/banners/banner-pd-vitrine-desktop01.png" class="d-block w-100" alt="Banner Desktop 2">
+                    </div>
+
+                </div>
+
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFadeDesktop" data-bs-slide="prev">
+                    <span class="custom-icon">
+                        <svg width="28" height="55" viewBox="0 0 28 55" xmlns="http://www.w3.org/2000/svg">
+                            <polyline points="22,5 6,27.5 22,50" stroke="white" stroke-width="2" fill="none" />
+                        </svg>
+                    </span>
+                    <span class="visually-hidden">Anterior</span>
+                </button>
+
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFadeDesktop" data-bs-slide="next">
+                    <span class="custom-icon">
+                        <svg width="28" height="55" viewBox="0 0 28 55" xmlns="http://www.w3.org/2000/svg">
+                            <polyline points="6,5 22,27.5 6,50" stroke="white" stroke-width="2" fill="none" />
+                        </svg>
+                    </span>
+                    <span class="visually-hidden">Próximo</span>
+                </button>
+            </div>
+        </section>
+
+        <!-- Carrossel Mobile -->
+        <section id="carrossel-mobile">
+            <div id="carouselExampleMobile" class="carousel slide carousel-fade">
+                <div class="carousel-inner">
+
+                    <div class="carousel-item active">
+                        <a href="#" target="_blank">
+                            <img src="imagens/banners/banner-pd-ead-mobile.jpg" class="d-block w-100" alt="Banner Mobile 1">
+                        </a>
+                    </div>
+
+                    <div class="carousel-item">
+                        <img src="imagens/banners/banner-pd-vitrine-mobile.jpg" class="d-block w-100" alt="Banner Mobile 2">
+                    </div>
+
+                </div>
+
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleMobile" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Anterior</span>
+                </button>
+
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleMobile" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Próximo</span>
+                </button>
+            </div>
+        </section>
 
     </main>
 
