feat: pagina projeto

--- a/index.html
+++ b/index.html
@@ -151,9 +151,8 @@
 
 
 
-    <main class="container-index">
-
-         <!-- Carrossel Desktop -->
+     <main>
+        <!-- Carrossel Desktop -->
         <section id="carrossel-desktop">
             <div id="carouselExampleFadeDesktop" class="carousel slide carousel-fade">
                 <div class="carousel-inner">
@@ -197,12 +196,12 @@
 
                     <div class="carousel-item active">
                         <a href="#" target="_blank">
-                            <img src="imagens/banners/banner-pd-ead-mobile.jpg" class="d-block w-100" alt="Banner Mobile 1">
+                            <img src="imagens/banners/banner-pd-vitrine-mobile.jpg" class="d-block w-100" alt="Banner Mobile 1">
                         </a>
                     </div>
 
                     <div class="carousel-item">
-                        <img src="imagens/banners/banner-pd-vitrine-mobile.jpg" class="d-block w-100" alt="Banner Mobile 2">
+                        <img src="imagens/banners/banner-pd-ead-mobile.jpg" class="d-block w-100" alt="Banner Mobile 2">
                     </div>
 
                 </div>
@@ -218,7 +217,6 @@
                 </button>
             </div>
         </section>
-
     </main>
 
 
