fix: posição imagem projeto

--- a/projeto.html
+++ b/projeto.html
@@ -184,8 +184,8 @@
                             <img src="imagens/badges/HTML.svg" alt="Badge HTML" class="badge-icon">
                             <img src="imagens/badges/CSS.svg" alt="Badge CSS" class="badge-icon">
                             <img src="imagens/badges/Figma.svg" alt="Badge Figma" class="badge-icon">
-                            <img src="imagens/badges/Java.svg" alt="Badge Java" class="badge-icon">
-                            <img src="imagens/badges/JavaScript.svg" alt="Badge JavaScript" class="badge-icon">
+                            <img src="imagens/badges/JAVA.svg" alt="Badge Java" class="badge-icon">
+                            <img src="imagens/badges/Javascript.svg" alt="Badge JavaScript" class="badge-icon">
                             <img src="imagens/badges/Git.svg" alt="Badge Git" class="badge-icon">
                         </div>
                     </section>
