fix: projeto - corrige o scroll lateral

--- a/projeto.html
+++ b/projeto.html
@@ -150,8 +150,8 @@
 
     <!-- Botão voltar página de Perfil -->
     <div class="pd-projeto-botao-voltar">
-        <a href="perfil.html" class="d-flex align-items-center text-decoration-none fw-bold h-100 ps-3">
-            <img src="imagens/icones/return.svg" alt="retornar" class="me-3 botao-voltar-projeto">
+        <a href="perfil.html" class="d-flex align-items-center text-decoration-none fw-bold ps-3">
+            <img src="imagens/icones/return.svg" alt="retornar" class="botao-voltar-projeto">
             <span>PD Vitrine</span>
         </a>
     </div>
@@ -188,8 +188,8 @@
                     <section class="project-card">
                         <h3>Links</h3>
                         <div class="projects-links-container">
-                            <a href="#" class="btn btn-project">Aplicação</a>
-                            <a href="#" class="btn btn-project">Repositório</a>
+                            <a href="https://homologacao-pd-vitrine.vercel.app/" class="btn btn-project">Aplicação</a>
+                            <a href="https://github.com/L0pe5/homologacao-pd-vitrine" class="btn btn-project">Repositório</a>
                         </div>
                     </section>
 
