feat: scrollbar card 1 de informação

--- a/perfil.html
+++ b/perfil.html
@@ -192,12 +192,19 @@
                     <div class=" back-amarelo">
                         <h1 class="titulos-artigos">Quem sou eu ?</h1>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur. At aliquam massa massa orci
+                    <p class="caixa-quem-sou-eu">
+                        Lorem ipsum dolor sit amet consectetur. At aliquam massa massa orci
                         malesuada id. Porta blandit eu semper dictum nunc neque neque odio
                         vitae. Vitae fringilla scelerisque eu ipsum cras amet quis adipiscing
                         elit. Cursus tincidunt nunc feugiat consectetur. Non pellentesque
                         vulputate neque neque. Ut amet cras velit natoque neque malesuada
-                        condimentum. Lorem diam pharetra massa amet</p>
+                        condimentum. Lorem diam pharetra massa amet Lorem ipsum dolor sit amet
+                        malesuada id. Porta blandit eu semper dictum nunc neque neque odio
+                        vitae. Vitae fringilla scelerisque eu ipsum cras amet quis adipiscing
+                        elit. Cursus tincidunt nunc feugiat consectetur. Non pellentesque
+                        vulputate neque neque. Ut amet cras velit natoque neque malesuada
+                        condimentum. Lorem diam pharetra massa amet
+                    </p>
                 </article>
 
                 <article class="article-quemSou-Formação">
