fix: correção do caminho das imgs

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
     <main class="m-0 p-0">
         <!-- cards perfil index -->
         <section
-            class="row row-cols-1 row-cols-sm-1 row-cols-md-4 row-cols-lg-4 gap-3 gap-md-4 justify-content-center mt-5">
+            class="row row-cols-1 row-cols-sm-1 row-cols-md-4 row-cols-lg-4 gap-3 gap-md-4 justify-content-center margem-top">
             <!-- card perfil -->
             <article
                 class="col card-index d-flex flex-column justify-content-center align-items-center m-0 p-0 position-relative">
