fix: correção do caminho da imagem

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                     </div>
                     <!-- badges -->
                     <div class="w-100 d-flex justify-content-center align-items-center flex-wrap gap-1 gap-md-2">
-                        <img src="./imagens/Badges/SQLite.svg" alt="SQLite" class="card-index__badges">
+                        <img src="./imagens/Badges/HTML.svg" alt="SQLite" class="card-index__badges">
                         <img src="./imagens/badges/Javascript.svg" alt="Javascript" class="card-index__badges">
                         <img src="./imagens/badges/MySQL.svg" alt="MySQL" class="card-index__badges">
                         <img src="./imagens/badges/CSS.svg" alt="CSS" class="card-index__badges">
@@ -314,7 +314,7 @@
                     </div>
                     <!-- badges -->
                     <div class="w-100 d-flex justify-content-center align-items-center flex-wrap gap-1 gap-md-2">
-                        <img src="./imagens/Badges/SQLite.svg" alt="SQLite" class="card-index__badges">
+                        <img src="./imagens/Badges/HTML.svg" alt="SQLite" class="card-index__badges">
                         <img src="./imagens/badges/Javascript.svg" alt="Javascript" class="card-index__badges">
                         <img src="./imagens/badges/MySQL.svg" alt="MySQL" class="card-index__badges">
                         <img src="./imagens/badges/CSS.svg" alt="CSS" class="card-index__badges">
@@ -377,7 +377,7 @@
                     </div>
                     <!-- badges -->
                     <div class="w-100 d-flex justify-content-center align-items-center flex-wrap gap-1 gap-md-2">
-                        <img src="./imagens/Badges/SQLite.svg" alt="SQLite" class="card-index__badges">
+                        <img src="./imagens/Badges/HTML.svg" alt="SQLite" class="card-index__badges">
                         <img src="./imagens/badges/Javascript.svg" alt="Javascript" class="card-index__badges">
                         <img src="./imagens/badges/MySQL.svg" alt="MySQL" class="card-index__badges">
                         <img src="./imagens/badges/CSS.svg" alt="CSS" class="card-index__badges">
@@ -440,9 +440,9 @@
                     </div>
                     <!-- badges -->
                     <div class="w-100 d-flex justify-content-center align-items-center flex-wrap gap-1 gap-md-2">
-                        <img src="./imagens/Badges/SQLite.svg" alt="SQLite" class="card-index__badges">
+                        <img src="./imagens/Badges/HTML.svg" alt="SQLite" class="card-index__badges">
                         <img src="./imagens/badges/Javascript.svg" alt="Javascript" class="card-index__badges">
-                        <img src="./imagens/Badges/SQLite.svg" alt="SQLite" class="card-index__badges">
+                        <img src="./imagens/Badges/HTML.svg" alt="SQLite" class="card-index__badges">
                         <img src="./imagens/badges/Javascript.svg" alt="Javascript" class="card-index__badges">
                         <img src="./imagens/badges/MySQL.svg" alt="MySQL" class="card-index__badges">
                         <img src="./imagens/badges/CSS.svg" alt="CSS" class="card-index__badges">
