--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
     </header>
 
-    <figure>
+    <figure class="m-0 p-0">
         <!-- Carrossel Desktop -->
         <section id="carrossel-desktop">
             <div id="carouselExampleFadeDesktop" class="carousel slide carousel-fade">
@@ -223,6 +223,7 @@
             </div>
         </section>
     </figure>
+
     <main class="m-0 p-0">
         <!-- cards perfil index -->
         <section
@@ -251,7 +252,7 @@
                     </div>
                     <!-- badges -->
                     <div class="w-100 d-flex justify-content-center align-items-center flex-wrap gap-1 gap-md-2">
-                        <img src="./imagens/Badges/HTML.svg" alt="SQLite" class="card-index__badges">
+                        <img src="./imagens/badges/SQLite.svg" alt="SQLite" class="card-index__badges">
                         <img src="./imagens/badges/Javascript.svg" alt="Javascript" class="card-index__badges">
                         <img src="./imagens/badges/MySQL.svg" alt="MySQL" class="card-index__badges">
                         <img src="./imagens/badges/CSS.svg" alt="CSS" class="card-index__badges">
@@ -314,7 +315,7 @@
                     </div>
                     <!-- badges -->
                     <div class="w-100 d-flex justify-content-center align-items-center flex-wrap gap-1 gap-md-2">
-                        <img src="./imagens/Badges/HTML.svg" alt="SQLite" class="card-index__badges">
+                        <img src="./imagens/badges/SQLite.svg" alt="SQLite" class="card-index__badges">
                         <img src="./imagens/badges/Javascript.svg" alt="Javascript" class="card-index__badges">
                         <img src="./imagens/badges/MySQL.svg" alt="MySQL" class="card-index__badges">
                         <img src="./imagens/badges/CSS.svg" alt="CSS" class="card-index__badges">
@@ -377,7 +378,7 @@
                     </div>
                     <!-- badges -->
                     <div class="w-100 d-flex justify-content-center align-items-center flex-wrap gap-1 gap-md-2">
-                        <img src="./imagens/Badges/HTML.svg" alt="SQLite" class="card-index__badges">
+                        <img src="./imagens/badges/SQLite.svg" alt="SQLite" class="card-index__badges">
                         <img src="./imagens/badges/Javascript.svg" alt="Javascript" class="card-index__badges">
                         <img src="./imagens/badges/MySQL.svg" alt="MySQL" class="card-index__badges">
                         <img src="./imagens/badges/CSS.svg" alt="CSS" class="card-index__badges">
@@ -440,9 +441,9 @@
                     </div>
                     <!-- badges -->
                     <div class="w-100 d-flex justify-content-center align-items-center flex-wrap gap-1 gap-md-2">
-                        <img src="./imagens/Badges/HTML.svg" alt="SQLite" class="card-index__badges">
+                        <img src="./imagens/badges/SQLite.svg" alt="SQLite" class="card-index__badges">
                         <img src="./imagens/badges/Javascript.svg" alt="Javascript" class="card-index__badges">
-                        <img src="./imagens/Badges/HTML.svg" alt="SQLite" class="card-index__badges">
+                        <img src="./imagens/Badges/SQLite.svg" alt="SQLite" class="card-index__badges">
                         <img src="./imagens/badges/Javascript.svg" alt="Javascript" class="card-index__badges">
                         <img src="./imagens/badges/MySQL.svg" alt="MySQL" class="card-index__badges">
                         <img src="./imagens/badges/CSS.svg" alt="CSS" class="card-index__badges">
