fix: correções da feat38

--- a/perfil.html
+++ b/perfil.html
@@ -207,7 +207,7 @@
                     </p>
                 </article>
 
-                <article class="article-quemSou-Formação">
+                <article class="article-quemSou-Formação quemSou2">
                     <div class=" back-amarelo">
                         <h1 class="titulos-artigos">Formações</h1>
                     </div>
