--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="modal-dialog modal__sistemas">
                 <div class="modal-content cor-bg"><!-- conteúdos do modal -->
                     <div class="modal-header modal__sistemas-header d-flex align-items-center justify-content-center">
-                        <h1 class="modal-title fs-5 m-0 p-0" id="btn-sistemaLabel">Sistemas</h1>
+                        <h1 class="fs-5 m-0 p-0" id="btn-sistemaLabel">Sistemas</h1>
 
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
@@ -153,17 +153,17 @@
         <!-- Carrossel Desktop -->
         <section id="carrossel-desktop">
             <div id="carouselExampleFadeDesktop" class="carousel slide carousel-fade">
-                <div class="carousel-inner">
+                <div class="carousel-inner w-100">
 
                     <div class="carousel-item active">
                         <a href="#" target="_blank">
-                            <img src="imagens/banners/banner-pd-ead-desktop.png" class="d-block w-100"
+                            <img src="imagens/banners/banner-pd-ead-desktop.png" class="d-block"
                                 alt="Banner Desktop 1">
                         </a>
                     </div>
 
                     <div class="carousel-item">
-                        <img src="imagens/banners/banner-pd-vitrine-desktop01.png" class="d-block w-100"
+                        <img src="imagens/banners/banner-pd-vitrine-desktop01.png" class="d-block"
                             alt="Banner Desktop 2">
                     </div>
 
@@ -258,7 +258,67 @@
                         <img src="./imagens/badges/CSS.svg" alt="CSS" class="card-index__badges">
                         <img src="./imagens/badges/SpringBoot.svg" alt="HTML" class="card-index__badges">
                         <img src="./imagens/badges/Python.svg" alt="python" class="card-index__badges">
+                        <img src="./imagens/badges/Angular.svg" alt="MySQL" class="card-index__badges">
+                    </div>
+                    <!-- seção responsaveis tec. e supervisor -->
+                    <div class="w-100 d-flex justify-content-evenly align-items-center m-0 p-0">
+                        <!-- responsavel -->
+                        <div class="card-index__coordenadores d-flex justify-content-center align-items-center gap-1">
+                            <img src="./imagens/icones/Responsável Tecnico.svg" alt="responsável técnico"
+                                class="card-index__icones">
+                            <div>
+                                <h2 class="fw-bold">Responsável técnico:</h2>
+                                <p>Nome Sobrenome</p>
+                            </div>
+                        </div>
+                        <!-- supervisor -->
+                        <div class="card-index__coordenadores d-flex justify-content-center align-items-center gap-1">
+                            <img src="/imagens/icones/Supervisor.svg" alt="icone supervisor" class="card-index__icones">
+                            <div>
+                                <h2 class="fw-bold">Supervisor:</h2>
+                                <p>Nome Sobrenome</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- botão ver mais -->
+                    <a href="#"
+                        class="card-index__btn-ver-mais d-flex justify-content-center align-items-center border border-0 text-decoration-none ">
+                        Ver Perfil
+                    </a>
+                </div>
+            </article>
+
+            <!-- card perfil -->
+            <article
+                class="col card-index d-flex flex-column justify-content-center align-items-center m-0 p-0 position-relative">
+                <!-- retangulo amarelo e img perfil -->
+                <div class="card-index__retangulo-amarelo position-absolute top-0 start-0 position-relative">
+                    <!-- foto perfil -->
+                    <figure class="m-0">
+                        <img src="./imagens/icones/Foto.svg" alt="foto padrão"
+                            class="card-index__foto rounded-circle position-absolute top-100 start-50 translate-middle">
+                        <figcaption>Foto padrão</figcaption>
+                    </figure>
+                </div>
+                <!-- seção conteudo -->
+                <div class="card-index__conteudo d-flex flex-column justify-content-evenly align-items-center ">
+                    <!-- identificação -->
+                    <div class=" d-flex flex-column justify-content-evenly align-items-center">
+                        <h2 class="card-index__nome text-capitalize m-0 p-0">Nome Sobrenome</h2>
+                        <p class="card-index__descricao text-center lh-sm m-0 p-0">Desenvolvedor Software | Criação
+                            de
+                            Sites e
+                            Sistemas Web | Automação</p>
+                    </div>
+                    <!-- badges -->
+                    <div class="w-100 d-flex justify-content-center align-items-center flex-wrap gap-1 gap-md-2">
+                        <img src="./imagens/badges/SQLite.svg" alt="SQLite" class="card-index__badges">
+                        <img src="./imagens/badges/Javascript.svg" alt="Javascript" class="card-index__badges">
                         <img src="./imagens/badges/MySQL.svg" alt="MySQL" class="card-index__badges">
+                        <img src="./imagens/badges/CSS.svg" alt="CSS" class="card-index__badges">
+                        <img src="./imagens/badges/SpringBoot.svg" alt="HTML" class="card-index__badges">
+                        <img src="./imagens/badges/Python.svg" alt="python" class="card-index__badges">
+                        <img src="./imagens/badges/C++.svg" alt="MySQL" class="card-index__badges">
                         <!-- <img src="./imagens/badges/CSS.svg" alt="CSS" class="card-index__badges">
                         <img src="./imagens/badges/HTML.svg" alt="HTML" class="card-index__badges">
                         <img src="./imagens/badges/Python.svg" alt="python" class="card-index__badges"> -->
@@ -321,10 +381,10 @@
                         <img src="./imagens/badges/CSS.svg" alt="CSS" class="card-index__badges">
                         <img src="./imagens/badges/SpringBoot.svg" alt="HTML" class="card-index__badges">
                         <img src="./imagens/badges/Python.svg" alt="python" class="card-index__badges">
-                        <img src="./imagens/badges/MySQL.svg" alt="MySQL" class="card-index__badges">
-                        <!-- <img src="./imagens/badges/CSS.svg" alt="CSS" class="card-index__badges">
+                        <img src="./imagens/badges/Figma.svg" alt="MySQL" class="card-index__badges">
+                        <img src="./imagens/badges/Docker.svg" alt="CSS" class="card-index__badges">
                         <img src="./imagens/badges/HTML.svg" alt="HTML" class="card-index__badges">
-                        <img src="./imagens/badges/Python.svg" alt="python" class="card-index__badges"> -->
+                        <img src="./imagens/badges/Git.svg" alt="python" class="card-index__badges">
                     </div>
                     <!-- seção responsaveis tec. e supervisor -->
                     <div class="w-100 d-flex justify-content-evenly align-items-center m-0 p-0">
@@ -378,83 +438,16 @@
                     </div>
                     <!-- badges -->
                     <div class="w-100 d-flex justify-content-center align-items-center flex-wrap gap-1 gap-md-2">
-                        <img src="./imagens/badges/SQLite.svg" alt="SQLite" class="card-index__badges">
-                        <img src="./imagens/badges/Javascript.svg" alt="Javascript" class="card-index__badges">
-                        <img src="./imagens/badges/MySQL.svg" alt="MySQL" class="card-index__badges">
-                        <img src="./imagens/badges/CSS.svg" alt="CSS" class="card-index__badges">
-                        <img src="./imagens/badges/SpringBoot.svg" alt="HTML" class="card-index__badges">
-                        <img src="./imagens/badges/Python.svg" alt="python" class="card-index__badges">
-                        <img src="./imagens/badges/MySQL.svg" alt="MySQL" class="card-index__badges">
-                        <img src="./imagens/badges/SpringBoot.svg" alt="CSS" class="card-index__badges">
-                        <img src="./imagens/badges/HTML.svg" alt="HTML" class="card-index__badges">
-                        <img src="./imagens/badges/Python.svg" alt="python" class="card-index__badges">
-                    </div>
-                    <!-- seção responsaveis tec. e supervisor -->
-                    <div class="w-100 d-flex justify-content-evenly align-items-center m-0 p-0">
-                        <!-- responsavel -->
-                        <div class="card-index__coordenadores d-flex justify-content-center align-items-center gap-1">
-                            <img src="./imagens/icones/Responsável Tecnico.svg" alt="responsável técnico"
-                                class="card-index__icones">
-                            <div>
-                                <h2 class="fw-bold">Responsável técnico:</h2>
-                                <p>Nome Sobrenome</p>
-                            </div>
-                        </div>
-                        <!-- supervisor -->
-                        <div class="card-index__coordenadores d-flex justify-content-center align-items-center gap-1">
-                            <img src="/imagens/icones/Supervisor.svg" alt="icone supervisor" class="card-index__icones">
-                            <div>
-                                <h2 class="fw-bold">Supervisor:</h2>
-                                <p>Nome Sobrenome</p>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- botão ver mais -->
-                    <a href="#"
-                        class="card-index__btn-ver-mais d-flex justify-content-center align-items-center border border-0 text-decoration-none ">
-                        Ver Perfil
-                    </a>
-                </div>
-            </article>
-
-            <!-- card perfil -->
-            <article
-                class="col card-index d-flex flex-column justify-content-center align-items-center m-0 p-0 position-relative">
-                <!-- retangulo amarelo e img perfil -->
-                <div class="card-index__retangulo-amarelo position-absolute top-0 start-0 position-relative">
-                    <!-- foto perfil -->
-                    <figure class="m-0">
-                        <img src="./imagens/icones/Foto.svg" alt="foto padrão"
-                            class="card-index__foto rounded-circle position-absolute top-100 start-50 translate-middle">
-                        <figcaption>Foto padrão</figcaption>
-                    </figure>
-                </div>
-                <!-- seção conteudo -->
-                <div class="card-index__conteudo d-flex flex-column justify-content-evenly align-items-center ">
-                    <!-- identificação -->
-                    <div class=" d-flex flex-column justify-content-evenly align-items-center">
-                        <h2 class="card-index__nome text-capitalize m-0 p-0">Nome Sobrenome</h2>
-                        <p class="card-index__descricao text-center lh-sm m-0 p-0">Desenvolvedor Software | Criação
-                            de
-                            Sites e
-                            Sistemas Web | Automação</p>
-                    </div>
-                    <!-- badges -->
-                    <div class="w-100 d-flex justify-content-center align-items-center flex-wrap gap-1 gap-md-2">
-                        <img src="./imagens/badges/SQLite.svg" alt="SQLite" class="card-index__badges">
-                        <img src="./imagens/badges/Javascript.svg" alt="Javascript" class="card-index__badges">
-                        <img src="./imagens/Badges/SQLite.svg" alt="SQLite" class="card-index__badges">
-                        <img src="./imagens/badges/Javascript.svg" alt="Javascript" class="card-index__badges">
-                        <img src="./imagens/badges/MySQL.svg" alt="MySQL" class="card-index__badges">
-                        <img src="./imagens/badges/CSS.svg" alt="CSS" class="card-index__badges">
+                        <img src="./imagens/badges/Rust.svg" alt="MySQL" class="card-index__badges">
+                        <img src="./imagens/badges/Scrum.svg" alt="CSS" class="card-index__badges">
                         <img src="./imagens/badges/SpringBoot.svg" alt="HTML" class="card-index__badges">
                         <img src="./imagens/badges/Python.svg" alt="python" class="card-index__badges">
                         <img src="./imagens/badges/MySQL.svg" alt="MySQL" class="card-index__badges">
                         <img src="./imagens/badges/CSS.svg" alt="CSS" class="card-index__badges">
                         <img src="./imagens/badges/HTML.svg" alt="HTML" class="card-index__badges">
-                        <img src="./imagens/badges/Python.svg" alt="python" class="card-index__badges">
-                        <img src="./imagens/badges/SpringBoot.svg" alt="python" class="card-index__badges">
-                        <img src="./imagens/badges/SpringBoot.svg" alt="python" class="card-index__badges">
+                        <img src="./imagens/badges/PHP.svg" alt="python" class="card-index__badges">
+                        <img src="./imagens/badges/Go.svg" alt="python" class="card-index__badges">
+                        <img src="./imagens/badges/JAVA.svg" alt="python" class="card-index__badges">
                     </div>
                     <!-- seção responsaveis tec. e supervisor -->
                     <div class="w-100 d-flex justify-content-evenly align-items-center m-0 p-0">
@@ -484,6 +477,7 @@
                 </div>
             </article>
         </section>
+
     </main>
 
 
