feat: fluxo de caminho
links nos href

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <h6 class="dropdown-header">Sistemas</h6>
                     </li>
                     <li>
-                        <a class="dropdown-item" href="#">PD Case EAD</a>
+                        <a class="dropdown-item" href="https://talentos.pdcase.com/">PD Case EAD</a>
                     </li>
                 </ul>
             </div>
@@ -83,7 +83,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body m-0 p-0"><!-- opções de sistemas -->
-                        <a class="dropdown-item " href="index.html">PD Case EAD</a>
+                        <a class="dropdown-item " href="https://talentos.pdcase.com/">PD Case EAD</a>
                     </div>
                 </div>
             </div>
@@ -157,8 +157,7 @@
 
                     <div class="carousel-item active">
                         <a href="#" target="_blank">
-                            <img src="imagens/banners/banner-pd-ead-desktop.png" class="d-block"
-                                alt="Banner Desktop 1">
+                            <img src="imagens/banners/banner-pd-ead-desktop.png" class="d-block" alt="Banner Desktop 1">
                         </a>
                     </div>
 
@@ -281,7 +280,7 @@
                         </div>
                     </div>
                     <!-- botão ver mais -->
-                    <a href="#"
+                    <a href="/perfil.html"
                         class="card-index__btn-ver-mais d-flex justify-content-center align-items-center border border-0 text-decoration-none ">
                         Ver Perfil
                     </a>
@@ -344,7 +343,7 @@
                         </div>
                     </div>
                     <!-- botão ver mais -->
-                    <a href="#"
+                    <a href="/perfil.html"
                         class="card-index__btn-ver-mais d-flex justify-content-center align-items-center border border-0 text-decoration-none ">
                         Ver Perfil
                     </a>
@@ -407,7 +406,7 @@
                         </div>
                     </div>
                     <!-- botão ver mais -->
-                    <a href="#"
+                    <a href="/perfil.html"
                         class="card-index__btn-ver-mais d-flex justify-content-center align-items-center border border-0 text-decoration-none ">
                         Ver Perfil
                     </a>
@@ -470,7 +469,7 @@
                         </div>
                     </div>
                     <!-- botão ver mais -->
-                    <a href="#"
+                    <a href="/perfil.html"
                         class="card-index__btn-ver-mais d-flex justify-content-center align-items-center border border-0 text-decoration-none ">
                         Ver Perfil
                     </a>
