--- a/projeto.html
+++ b/projeto.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-<!-- cabeçalho -->
+    <!-- cabeçalho -->
     <header class="d-flex flex-row align-items-center justify-content-between m-0">
         <!-- logo -->
         <a href="index.html">
@@ -60,7 +60,7 @@
                         <h6 class="dropdown-header">Sistemas</h6>
                     </li>
                     <li>
-                        <a class="dropdown-item" href="#">PD Case EAD</a>
+                        <a class="dropdown-item" href="https://talentos.pdcase.com/">PD Case EAD</a>
                     </li>
                 </ul>
             </div>
@@ -79,12 +79,12 @@
             <div class="modal-dialog modal__sistemas">
                 <div class="modal-content cor-bg"><!-- conteúdos do modal -->
                     <div class="modal-header modal__sistemas-header d-flex align-items-center justify-content-center">
-                        <h1 class="modal-title fs-5 m-0 p-0" id="btn-sistemaLabel">Sistemas</h1>
+                        <h1 class="fs-5 m-0 p-0" id="btn-sistemaLabel">Sistemas</h1>
 
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body m-0 p-0"><!-- opções de sistemas -->
-                        <a class="dropdown-item " href="index.html">PD Case EAD</a>
+                        <a class="dropdown-item " href="https://talentos.pdcase.com/">PD Case EAD</a>
                     </div>
                 </div>
             </div>
@@ -115,7 +115,8 @@
                                     <div class="custom-dropdown">
                                         <div class="dropdown-select badge-select" tabindex="0" data-value="">
                                             <span>Badges</span>
-                                            <img src="imagens/icones/down.svg" class="dropdown-arrow icon" alt="seta para abrir">
+                                            <img src="imagens/icones/down.svg" class="dropdown-arrow icon"
+                                                alt="seta para abrir">
                                         </div>
                                         <div class="dropdown-menu-custom badge-dropdown-menu"></div>
                                     </div>
@@ -124,7 +125,8 @@
                                     <div class="custom-dropdown">
                                         <div class="dropdown-select level-select" tabindex="0" data-value="">
                                             <span>Níveis de experiência</span>
-                                            <img src="imagens/icones/down.svg" class="dropdown-arrow icon" alt="seta para abrir">
+                                            <img src="imagens/icones/down.svg" class="dropdown-arrow icon"
+                                                alt="seta para abrir">
                                         </div>
                                         <div class="dropdown-menu-custom level-dropdown-menu"></div>
                                     </div>
@@ -145,6 +147,7 @@
             </div>
         </div>
         <!-- fim modal filtragem -->
+
     </header>
     <!-- fim cabeçalho -->
 
@@ -169,7 +172,9 @@
                 <div class="project-info-sidebar">
                     <section class="project-card">
                         <h3>Descrição</h3>
-                        <p>PD Vitrine, a porta de entrada para um ecossistema de talentos. Descubra os perfis e projetos de nossos desenvolvedores mais promissores, um local onde o conhecimento ganha visibilidade e propósito, formando talentos prontos para as demandas do mercado de tecnologia.</p>
+                        <p>PD Vitrine, a porta de entrada para um ecossistema de talentos. Descubra os perfis e projetos
+                            de nossos desenvolvedores mais promissores, um local onde o conhecimento ganha visibilidade
+                            e propósito, formando talentos prontos para as demandas do mercado de tecnologia.</p>
                     </section>
 
                     <section class="project-card">
@@ -189,7 +194,8 @@
                         <h3>Links</h3>
                         <div class="projects-links-container">
                             <a href="https://homologacao-pd-vitrine.vercel.app/" class="btn btn-project">Aplicação</a>
-                            <a href="https://github.com/L0pe5/homologacao-pd-vitrine" class="btn btn-project">Repositório</a>
+                            <a href="https://github.com/L0pe5/homologacao-pd-vitrine"
+                                class="btn btn-project">Repositório</a>
                         </div>
                     </section>
 
@@ -240,7 +246,7 @@
         <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
             <div class="modal-content">
                 <button class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
-                
+
                 <div class="modal-body">
                     <img class="img-fluid" id="modal-image" src="" alt="Imagem do projeto em destaque">
                 </div>
