feat: página projeto PD EAD

--- a/projeto_pd_ead.html
+++ b/projeto_pd_ead.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <!-- cabeçalho -->
+<!-- cabeçalho -->
     <header class="d-flex flex-row align-items-center justify-content-between m-0">
         <!-- logo -->
         <a href="index.html">
@@ -60,7 +60,7 @@
                         <h6 class="dropdown-header">Sistemas</h6>
                     </li>
                     <li>
-                        <a class="dropdown-item" href="https://talentos.pdcase.com/">PD Case EAD</a>
+                        <a class="dropdown-item" href="#">PD Case EAD</a>
                     </li>
                 </ul>
             </div>
@@ -79,12 +79,12 @@
             <div class="modal-dialog modal__sistemas">
                 <div class="modal-content cor-bg"><!-- conteúdos do modal -->
                     <div class="modal-header modal__sistemas-header d-flex align-items-center justify-content-center">
-                        <h1 class="fs-5 m-0 p-0" id="btn-sistemaLabel">Sistemas</h1>
+                        <h1 class="modal-title fs-5 m-0 p-0" id="btn-sistemaLabel">Sistemas</h1>
 
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body m-0 p-0"><!-- opções de sistemas -->
-                        <a class="dropdown-item " href="https://talentos.pdcase.com/">PD Case EAD</a>
+                        <a class="dropdown-item " href="index.html">PD Case EAD</a>
                     </div>
                 </div>
             </div>
@@ -115,8 +115,7 @@
                                     <div class="custom-dropdown">
                                         <div class="dropdown-select badge-select" tabindex="0" data-value="">
                                             <span>Badges</span>
-                                            <img src="imagens/icones/down.svg" class="dropdown-arrow icon"
-                                                alt="seta para abrir">
+                                            <img src="imagens/icones/down.svg" class="dropdown-arrow icon" alt="seta para abrir">
                                         </div>
                                         <div class="dropdown-menu-custom badge-dropdown-menu"></div>
                                     </div>
@@ -125,8 +124,7 @@
                                     <div class="custom-dropdown">
                                         <div class="dropdown-select level-select" tabindex="0" data-value="">
                                             <span>Níveis de experiência</span>
-                                            <img src="imagens/icones/down.svg" class="dropdown-arrow icon"
-                                                alt="seta para abrir">
+                                            <img src="imagens/icones/down.svg" class="dropdown-arrow icon" alt="seta para abrir">
                                         </div>
                                         <div class="dropdown-menu-custom level-dropdown-menu"></div>
                                     </div>
@@ -147,7 +145,6 @@
             </div>
         </div>
         <!-- fim modal filtragem -->
-
     </header>
     <!-- fim cabeçalho -->
 
@@ -155,7 +152,7 @@
     <div class="pd-projeto-botao-voltar">
         <a href="perfil.html" class="d-flex align-items-center text-decoration-none fw-bold ps-3">
             <img src="imagens/icones/return.svg" alt="retornar" class="botao-voltar-projeto">
-            <span>PD Vitrine</span>
+            <span>PD EAD</span>
         </a>
     </div>
     <main class="container-fluid py-3 px-4 main-projeto">
@@ -172,30 +169,32 @@
                 <div class="project-info-sidebar">
                     <section class="project-card">
                         <h3>Descrição</h3>
-                        <p>PD Vitrine, a porta de entrada para um ecossistema de talentos. Descubra os perfis e projetos
-                            de nossos desenvolvedores mais promissores, um local onde o conhecimento ganha visibilidade
-                            e propósito, formando talentos prontos para as demandas do mercado de tecnologia.</p>
+                        <p>Conhecimento onde você estiver - Aqui o ensino a distância ganha qualidade e propósito, formando talentos prontos para os desafios do futuro.</p>
                     </section>
 
                     <section class="project-card">
                         <h3>Badges</h3>
                         <div class="badges-container">
-                            <img src="imagens/badges/Figma.svg" alt="Badge Figma" class="badge-item">
                             <img src="imagens/badges/HTML.svg" alt="Badge HTML" class="badge-item">
                             <img src="imagens/badges/CSS.svg" alt="Badge CSS" class="badge-item">
                             <img src="imagens/badges/Javascript.svg" alt="Badge JavaScript" class="badge-item">
+                            <img src="imagens/badges/Angular.svg" alt="Badge Angular" class="badge-item">
+                            <img src="imagens/badges/Figma.svg" alt="Badge Figma" class="badge-item">
+                            <img src="imagens/badges/Scrum.svg" alt="Badge Scrum" class="badge-item">
+                            <img src="imagens/badges/SpringBoot.svg" alt="Badge Spring Boot" class="badge-item">
+                            <img src="imagens/badges/JAVA.svg" alt="Badge Java" class="badge-item">
+                            <img src="imagens/badges/Insomnia.svg" alt="Badge Insomnia" class="badge-item">
                             <img src="imagens/badges/Git.svg" alt="Badge Git" class="badge-item">
-                            <img src="imagens/badges/Github.svg" alt="Badge GitHub" class="badge-item">
-                            <img src="imagens/badges/Gitlab.svg" alt="Badge GitLab" class="badge-item">
+                            <img src="imagens/badges/Docker.svg" alt="Badge Docker" class="badge-item">
+                            <img src="imagens/badges/Swagger.svg" alt="Badge Swagger" class="badge-item">
                         </div>
                     </section>
 
                     <section class="project-card">
                         <h3>Links</h3>
                         <div class="projects-links-container">
-                            <a href="https://homologacao-pd-vitrine.vercel.app/" class="btn btn-project">Aplicação</a>
-                            <a href="https://github.com/L0pe5/homologacao-pd-vitrine"
-                                class="btn btn-project">Repositório</a>
+                            <a href="https://talentos.pdcase.com/" class="btn btn-project">Aplicação</a>
+                            <a href="https://talentos.pdcase.com/" class="btn btn-project">Repositório</a>
                         </div>
                     </section>
 
@@ -214,26 +213,6 @@
                                 <img src="imagens/icones/user.svg" alt="Ícone de usuário" class="profile-pic">
                                 <span class="collaborator-name">Matheus Lopes</span>
                             </li>
-                            <li class="collaborator-item">
-                                <img src="imagens/icones/user.svg" alt="Ícone de usuário" class="profile-pic">
-                                <span class="collaborator-name">Caio Caldeira</span>
-                            </li>
-                            <li class="collaborator-item">
-                                <img src="imagens/icones/user.svg" alt="Ícone de usuário" class="profile-pic">
-                                <span class="collaborator-name">Emanuel Bravo</span>
-                            </li>
-                            <li class="collaborator-item">
-                                <img src="imagens/icones/user.svg" alt="Ícone de usuário" class="profile-pic">
-                                <span class="collaborator-name">Geovanna Alves</span>
-                            </li>
-                            <li class="collaborator-item">
-                                <img src="imagens/icones/user.svg" alt="Ícone de usuário" class="profile-pic">
-                                <span class="collaborator-name">Joao Tavares</span>
-                            </li>
-                            <li class="collaborator-item">
-                                <img src="imagens/icones/user.svg" alt="Ícone de usuário" class="profile-pic">
-                                <span class="collaborator-name">Leonardo Maciel</span>
-                            </li>
                         </ul>
                     </section>
                 </div>
@@ -246,7 +225,7 @@
         <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
             <div class="modal-content">
                 <button class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
-
+                
                 <div class="modal-body">
                     <img class="img-fluid" id="modal-image" src="" alt="Imagem do projeto em destaque">
                 </div>
@@ -259,15 +238,16 @@
 
     <script>
         const projectImages = [
-            'imagens/projetos/vitrine (4).png',
-            'imagens/projetos/vitrine (5).png',
-            'imagens/projetos/vitrine (1).png',
-            'imagens/projetos/vitrine (3).png',
-            'imagens/projetos/vitrine (2).png',
-            'imagens/projetos/vitrine (6).png',
-            'imagens/projetos/vitrine (7).png',
-            'imagens/projetos/vitrine (8).png'
-
+            'imagens/projetos/pdead/tela login.png',
+            'imagens/projetos/pdead/tela forum.png',
+            'imagens/projetos/pdead/tela certificado.png',
+            'imagens/projetos/pdead/tela cadastrar projeto.png',
+            'imagens/projetos/pdead/pd case ead.png',
+            'imagens/projetos/pdead/dash usuario.png',
+            'imagens/projetos/pdead/dash curso.png',
+            'imagens/projetos/pdead/cadastrar usuario.png',
+            'imagens/projetos/pdead/criando topico forum.png',
+            'imagens/projetos/pdead/dash prof com atualizaçao.png'
         ];
     </script>
 
@@ -276,6 +256,7 @@
         crossorigin="anonymous"></script>
 
     <script src="js/projeto.js"></script>
+    <script src="/js/index.js"></script>
 </body>
 
 </html>
