--- a/index.html
+++ b/index.html
@@ -156,14 +156,15 @@
                 <div class="carousel-inner w-100">
 
                     <div class="carousel-item active">
-                        <a href="#" target="_blank">
-                            <img src="imagens/banners/banner-pd-ead-desktop.png" class="d-block" alt="Banner Desktop 1">
+                        <a href="projeto_pd_ead.html" target="">
+                            <img src="imagens/banners/banner-pd-ead-desktop.png" class="d-block w-100" alt="Banner Desktop 1">
                         </a>
                     </div>
-
+                    
                     <div class="carousel-item">
-                        <img src="imagens/banners/banner-pd-vitrine-desktop01.png" class="d-block"
-                            alt="Banner Desktop 2">
+                        <a href="projeto.html" target="">
+                            <img src="imagens/banners/banner-pd-vitrine-desktop01.png" class="d-block w-100" alt="Banner Desktop 2">
+                        </a>
                     </div>
 
                 </div>
